<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Treasure Hunt</string>
    <string name="getclue">Get Clue</string>
    <string name="tools">Tools</string>
    <string name="purchase">Purchase</string>
    <string name="map">Map</string>
    <string name="price">Price</string>
    <string name="buy">Buy</string>
    <string name="name">Name</string>
    <string name="clue">Clue</string>
    <string name="balance">Balance</string>
    <string name="check">Check\nHere</string>
    <string name="spacing">Spacing</string>
    <string name="getClue">Get Clue</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="enterTaunt">Enter the taunt you wish to send.</string>
    <string name="send">Send</string>
    <string name="touch">Touch to select tool.</string>
    <string name="logout">Logout</string>
    <string name="rankings">Rankings</string>
    <string name="tutorial">Tutorial</string>
    <string name="settingsTextBox">Settings text display.</string>
    <string name="radioGroupTitle">Select Target Below</string>
    <string name="confirmTarget">Confirm Target</string>
    <string name="moneySign">Money Sign</string>
    <string name="imageIcon">Icon</string>
    <string name="helpScreen">Help screen</string>
    <string name="treasureChest">Treasure chest</string>    
    <string name="completePurchase">Complete purchase</string>
    <string name="waitBackground">Waiting background</string>
    <string name="titleScreen">Title screen background</string>
    <string name="parchment">Parchment</string>
    <string name="settingsBackground">Settings background</string>
    <string name="gameStatus">Game status</string>
    <string name="skull">Skull</string>    
    <color name="grey">#808080</color>
    <color name="blue">#0000FF</color>
    <color name="white">#FFFFFF</color>
    <string name="win">Win</string>

</resources>