<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="440dp" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/chest"
        android:background="@drawable/map"
        android:shadowColor="#000000"
        android:shadowDx="-2"
        android:shadowDy="1"
        android:shadowRadius=".01"
        android:text="@string/map"
        android:textColor="#8B0000"
        android:textSize="30dip" />

    <TextView
        android:id="@+id/balanceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingBottom="5dip"
        android:paddingRight="10dip"
        android:text="@string/balance"
        android:textColor="#000000"
        android:textSize="25dip"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/chest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/balanceText"
        android:contentDescription="@string/treasureChest"
        android:paddingLeft="115dip"
        android:src="@drawable/chest" />

    <ImageView
        android:id="@+id/helpScreen"
        android:layout_width="wrap_content"
        android:layout_height="491dp"
        android:contentDescription="@string/helpScreen"
        android:src="@drawable/info_monkey"
        android:visibility="gone" />

    <Button
        android:id="@+id/buyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="54dp"
        android:layout_marginTop="52dp"
        android:text="@string/buy"
        android:textSize="25dip"
        android:visibility="gone" />

    <EditText
        android:id="@+id/tauntText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mapButton"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/enterTaunt"
        android:visibility="invisible" />

    <Button
        android:id="@+id/sendTauntButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/tauntText"
        android:layout_marginTop="22dp"
        android:text="@string/send"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/completePurchaseImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/completePurchase"
        android:src="@drawable/purchase_wait"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/networkProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:maxHeight="125dip"
        android:maxWidth="125dip"
        android:minHeight="125dip"
        android:minWidth="125dip"
        android:background="@color/progress_blue"
        android:visibility="invisible" />

</RelativeLayout>